--- a/src/app/components/auth/forgot-password/forgot-password.component.html
+++ b/src/app/components/auth/forgot-password/forgot-password.component.html
@@ -1,138 +1,79 @@
-<div
-    class="login_container w-100 h-100 d-flex justify-content-center align-items-center p-4"
->
-    <form
-        *ngIf="!email"
-        class="login_container_form d-flex flex-column col-12 lg:col-6 xl:col-4 p-4 rounded-2"
-        [formGroup]="loginForm"
-        (ngSubmit)="sendOTP()"
-    >
-        <app-logo class="m-auto mb-4"></app-logo>
-        <h4>Forgot Password?</h4>
-        <span class="my-4">
-            <h6>Email</h6>
+<div class="surface-ground flex align-items-center justify-content-center min-h-screen min-w-screen overflow-hidden">
+    <div class="flex flex-column align-items-center justify-content-center">
 
-            <input
-                class="inputtext w-100 ps-2 mt-1 form-control"
-                name="emailInput"
-                type="email"
-                pInputText
-                formControlName="userEmail"
-                (focus)="clearErrorNotification()"
-            />
-            <div *ngIf="isSubmitted">
-                <small
-                    class="text-danger"
-                    *ngIf="loginForm.get('userEmail')?.hasError('required')"
-                    >Email is required</small
-                >
-                <small
-                    class="text-danger"
-                    *ngIf="
-                        loginForm.get('userEmail')?.hasError('emailValidator')
-                    "
-                    >Please fill the correct email</small
-                >
+        <div
+            style="border-radius:56px; padding:0.3rem; background: linear-gradient(180deg, var(--primary-color) 10%, rgba(33, 150, 243, 0) 30%);">
+            <div class="w-full surface-card py-4 px-5 sm:px-8" style="border-radius:53px">
+                <!-- <div class="text-center mb-5">
+                    <div class="text-900 text-3xl font-medium mb-3">Welcome</div>
+                    <span class="text-600 font-medium">Sign in to continue</span>
+                </div> -->
+
+                <form *ngIf="!email" class="login_container_form d-flex flex-column  p-4 rounded-2"
+                    [formGroup]="loginForm" (ngSubmit)="sendOTP()">
+                    <app-logo class="m-auto mb-4"></app-logo>
+                    <h4>Forgot Password?</h4>
+                    <span class="my-4">
+                        <h6>Email</h6>
+
+                        <input class="w-full md:w-30rem ps-2 mt-2" name="emailInput" type="email" pInputText
+                            formControlName="userEmail" (focus)="clearErrorNotification()" />
+                        <div *ngIf="isSubmitted">
+                            <small class="text-danger" *ngIf="loginForm.get('userEmail')?.hasError('required')">Email is
+                                required</small>
+                            <small class="text-danger" *ngIf="
+                                    loginForm.get('userEmail')?.hasError('email')
+                                ">Please fill the correct email</small>
+                            <small class="text-danger" *ngIf="isWrongEmail">Email is not exist</small>
+                        </div>
+                    </span>
+
+                    <div class="btn-container d-flex justify-content-center pt-4">
+                        <button type="submit" class="btn btn-primary w-100 text-nowrap rounded-3">
+                            Send OTP
+                        </button>
+                    </div>
+                </form>
+
+                <form *ngIf="email"
+                    class="login_container_form d-flex flex-column col-12 col-sm-6 col-lg-3 p-4 rounded-2"
+                    [formGroup]="validateForm" (ngSubmit)="sendOTP()">
+                    <h4>Reset your password?</h4>
+                    <span class="my-4">
+                        <h6>OTP</h6>
+
+                        <input class="w-full md:w-30rem mb-5" name="emailInput" type="email" pInputText
+                            formControlName="otp" (focus)="clearErrorNotification()" autocomplete="false" />
+                        <div *ngIf="isSubmitted">
+                            <small class="text-danger" *ngIf="validateForm.get('otp')?.hasError('required')">OTP is
+                                required</small>
+                        </div>
+                    </span>
+                    <span class="mb-1">
+                        <h6>New Password</h6>
+                        <p-password class="inputtext w-100 mt-1 form-control" [toggleMask]="true"
+                            formControlName="newPassword" (focus)="clearErrorNotification()" [feedback]="false">
+                        </p-password>
+                        <div *ngIf="isSubmitted">
+                            <small class="text-danger" *ngIf="
+                                    validateForm.get('newPassword')?.hasError('required')
+                                ">
+                                Password is required.
+                            </small>
+                            <small class="text-danger text-center" *ngIf="msgError">
+                                {{ msgError }}.
+                            </small>
+                            <small class="text-success text-center" *ngIf="valid">Reset successfully
+                                <a href="/auth/login">Back to login</a></small>
+                        </div>
+                    </span>
+                    <div class="btn-container d-flex justify-content-center pt-4">
+                        <button type="submit" class="btn btn-primary w-100 text-nowrap rounded-3">
+                            Verify
+                        </button>
+                    </div>
+                </form>
             </div>
-        </span>
-        <!-- <span class="mb-1">
-      <h6>Password</h6>
-      <p-password
-        class="inputtext w-100 mt-1 form-control"
-        [toggleMask]="true"
-        formControlName="userPassword"
-        (focus)="clearErrorNotification()"
-        [feedback]="false"
-      >
-      </p-password>
-      <div *ngIf="isSubmitted">
-        <small
-          class="text-danger"
-          *ngIf="loginForm.get('userPassword')?.hasError('required')"
-        >
-          Password is required.
-        </small>
-        <small class="text-danger text-center" *ngIf="msgError">
-          {{ msgError }}.
-        </small>
-      </div>
-    </span> -->
-        <div class="btn-container d-flex justify-content-center pt-4">
-            <button
-                type="submit"
-                class="btn btn-primary w-100 text-nowrap rounded-3"
-            >
-                Send OTP
-            </button>
         </div>
-    </form>
-
-    <form
-        *ngIf="email"
-        class="login_container_form d-flex flex-column col-12 col-sm-6 col-lg-3 p-4 rounded-2"
-        [formGroup]="validateForm"
-        (ngSubmit)="sendOTP()"
-    >
-        <img
-            class="my-4 mx-auto w-75"
-            src="/assets//imgs/logo.png"
-            alt="Logo"
-        />
-        <h4>Reset your password?</h4>
-        <span class="my-4">
-            <h6>OTP</h6>
-
-            <input
-                class="inputtext w-100 ps-2 mt-1 form-control"
-                name="emailInput"
-                type="email"
-                pInputText
-                formControlName="otp"
-                (focus)="clearErrorNotification()"
-            />
-            <div *ngIf="isSubmitted">
-                <small
-                    class="text-danger"
-                    *ngIf="validateForm.get('otp')?.hasError('required')"
-                    >OTP is required</small
-                >
-            </div>
-        </span>
-        <span class="mb-1">
-            <h6>New Password</h6>
-            <p-password
-                class="inputtext w-100 mt-1 form-control"
-                [toggleMask]="true"
-                formControlName="newPassword"
-                (focus)="clearErrorNotification()"
-                [feedback]="false"
-            >
-            </p-password>
-            <div *ngIf="isSubmitted">
-                <small
-                    class="text-danger"
-                    *ngIf="
-                        validateForm.get('newPassword')?.hasError('required')
-                    "
-                >
-                    Password is required.
-                </small>
-                <small class="text-danger text-center" *ngIf="msgError">
-                    {{ msgError }}.
-                </small>
-                <small class="text-success text-center" *ngIf="valid"
-                    >Reset successfully
-                    <a href="/auth/login">Back to login</a></small
-                >
-            </div>
-        </span>
-        <div class="btn-container d-flex justify-content-center pt-4">
-            <button
-                type="submit"
-                class="btn btn-primary w-100 text-nowrap rounded-3"
-            >
-                Verify
-            </button>
-        </div>
-    </form>
+    </div>
 </div>
