--- a/src/app/components/user-pages/landing/landing.component.less
+++ b/src/app/components/user-pages/landing/landing.component.less
@@ -4,6 +4,8 @@
     .recommended-live {
         .live-slide {
             height: 300px;
+            width: fit-content;
+            margin: 0 1rem;
         }
     }
 }
@@ -55,7 +57,7 @@ swiper-slide {
 .banner {
     padding: 2rem;
     border-radius: 20px;
-    max-height: 50vh;
+    max-height: 40vh;
     background: #ff4b1f;
     background: -webkit-linear-gradient(to right, #1fddff, #ff4b1f);
     background: linear-gradient(to right, #1fddff, #ff4b1f);
