--- a/src/app/components/user-pages/user-profile/user-profile.component.html
+++ b/src/app/components/user-pages/user-profile/user-profile.component.html
@@ -20,7 +20,7 @@
                 <div class="row justify-content-center">
                     <div class="card-profile-image rounded-circle d-flex justify-content-center">
                         <img width="120px" height="120px" id="imgInput" src="{{ formGroup.value.userAvatar }}"
-                            onerror="this.onerror=null;this.src='/assets/imgs/no_user.png';" class="rounded-circle" />
+                            onerror="this.onerror=null;this.src='/assets/no_user.png';" class="rounded-circle" />
                     </div>
                 </div>
                 <div class="change-logo d-flex justify-content-center my-2">
