--- a/src/app/components/merchant-pages/admin-live/admin-live.component.html
+++ b/src/app/components/merchant-pages/admin-live/admin-live.component.html
@@ -15,23 +15,25 @@
                             ID <p-sortIcon field="merchantId"></p-sortIcon>
                         </th>
                         <th>Name</th>
+                        <th>Live Thumbnail</th>
                         <th pSortableColumn="createdDate">
                             Created Date
                             <p-sortIcon field="createdDate"></p-sortIcon>
                         </th>
-                        <th pSortableColumn="phoneNumber">
+                        <!-- <th pSortableColumn="phoneNumber">
                             Phone <p-sortIcon field="phoneNumber"></p-sortIcon>
                         </th>
 
                         <th pSortableColumn="cityName">
                             City
                             <p-sortIcon field="cityName"></p-sortIcon>
+                        </th> -->
+                        <th>
+                            Status
                         </th>
                         <th pSortableColumn="rating">
-                            Rating <p-sortIcon field="rating"></p-sortIcon>
+                            Action
                         </th>
-
-                        <th></th>
                     </tr>
                 </ng-template>
                 <ng-template pTemplate="body" let-product>
@@ -46,24 +48,28 @@
                                 {{ product.title }}
                             </span>
                         </td>
+                        <td>
+                            <img src="{{product.thumbnail}}" alt="" width="100" class="shadow-4">
+                        </td>
                         <td style="width: 14%; min-width: 8rem">
                             <span class="p-column-title">Created Date</span>
                             {{ product.startTime | date }}
                         </td>
-                        <td style="width: 14%; min-width: 10rem">
+                        <!-- <td style="width: 14%; min-width: 10rem">
                             <span class="p-column-title">Phone Number</span>
                             {{ product.phoneNumber }}
                         </td>
                         <td style="width: 14%; min-width: 10rem">
                             <span class="p-column-title">Rating</span>
                             <p-rating [ngModel]="product.rating || 0" [readonly]="true" [cancel]="false"></p-rating>
+                        </td> -->
+                        <td>
+                            {{product.status}}
                         </td>
-
                         <td>
                             <div class="flex">
-                                <button pButton pRipple icon="pi pi-pencil"
-                                    class="p-button-rounded p-button-success mr-2"
-                                    (click)="onRowSelect(product)"></button>
+                                <button pButton pRipple icon="pi pi-eye" class="p-button-rounded p-button-success mr-2"
+                                    (click)="openLive(product)" pTooltip="View Live"></button>
                             </div>
                         </td>
                     </tr>
