--- a/src/app/components/merchant-pages/product/product-detail/product-detail.component.less
+++ b/src/app/components/merchant-pages/product/product-detail/product-detail.component.less
@@ -83,3 +83,9 @@
         }
     }
 }
+
+:host::ng-deep {
+    .p-datatable > .p-datatable-wrapper {
+        max-height: 80vh !important;
+    }
+}
