--- a/src/app/components/shared/add product/add-product.component.scss
+++ b/src/app/components/shared/add product/add-product.component.scss
@@ -57,3 +57,11 @@ input[type="file"] {
         grid-template-columns: repeat(1, 1fr);
     }
 }
+
+.loading {
+    height: 95%;
+    width: 95%;
+    z-index: 2;
+    opacity: 0.8;
+    background-color: white;
+}
